--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -148,6 +148,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-fs')
     implementation project(':react-native-safe-area-context')
     implementation project(':react-native-svg')
     implementation 'com.quickbirdstudios:opencv:3.4.1'
