--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-native-camera": "3.0.1",
     "react-native-document-scanner": "https://github.com/ubidreams/react-native-document-scanner",
     "react-native-easy-toast": "^2.0.0",
+    "react-native-fs": "^2.18.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-svg": "9.6.2",
     "styled-components": "^5.3.0",
